Support query (#42)
